--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,6 +1,6 @@
 /******* Customized Bootstrap ********/
 
-$primary: #F3525A;
+$primary: #ece145;
 $secondary: #F6F6F6;
 $light: #FFFFFF;
 $dark: #152440;
@@ -15,7 +15,7 @@ $body-color: #6B6A75;
 
 $headings-color: $dark;
 
-$display-font-weight: 700;
+$display-font-weight: 500;
 
 $enable-responsive-font-sizes: true;
 
